--- a/index.html
+++ b/index.html
@@ -3,90 +3,166 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Besto Chemical | Besparol</title>
+  <title>Besto Chemical - Manufacturer of Paper, Packaging & Hygiene Products</title>
   <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f9f9f9;
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f9fafc;
+      color: #2b2b2b;
+      line-height: 1.6;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     header {
-      background-color: #4CAF50;
-      color: white;
+      background: #ffcc80;
+      color: #4a4a4a;
+      padding: 1.5rem 0;
       text-align: center;
-      padding: 1rem 0;
+      width: 100%;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
     nav {
-      background: #333;
-      padding: 0.5rem;
-      text-align: center;
+      background: #333333;
+      color: white;
+      padding: 0.75rem;
+      width: 100%;
     }
-    nav a {
+    nav ul {
+      display: flex;
+      justify-content: center;
+      list-style: none;
+    }
+    nav ul li {
+      margin: 0 1.5rem;
+    }
+    nav ul li a {
       color: white;
       text-decoration: none;
-      margin: 0 15px;
       font-weight: bold;
     }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .container {
-      padding: 2rem;
-      max-width: 960px;
-      margin: auto;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .contact {
-      margin-top: 1.5rem;
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
       padding: 1rem;
-      background: #f1f1f1;
-      border-radius: 8px;
+    }
+    section {
+      margin-bottom: 2rem;
     }
     footer {
-      background: #333;
+      background: #333333;
       color: white;
-      text-align: center;
       padding: 1rem 0;
-      margin-top: 2rem;
+      text-align: center;
+      width: 100%;
+    }
+    .button {
+      display: inline-block;
+      background: #007acc;
+      color: white;
+      padding: 0.5rem 1rem;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+    .expertise-section {
+      background: #ffffff;
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    .expertise-section h2 {
+      font-size: 1.8rem;
+      color: #007acc;
+      font-weight: bold;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+    .expertise-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 1.5rem;
+    }
+    .expertise-card {
+      background: #f3f3f3;
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+      text-align: center;
+      transition: transform 0.2s;
+    }
+    .expertise-card:hover {
+      transform: translateY(-5px);
+    }
+    .expertise-card h3 {
+      color: #007acc;
+      font-weight: bold;
+      margin-bottom: 0.5rem;
+    }
+    .expertise-card p {
+      color: #555555;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Welcome to Besto Chemical</h1>
-    <h2>Home of Besparol Products</h2>
+    <span style='font-weight: 900; font-size: 2rem; font-family: "Georgia", serif;'>Besto Chemical</span>
+    <h2 style='font-size: 1.5rem; color: #d35400; margin-top: 0.5rem;'>Manufacturer of Paper, Packaging & Hygiene Products</h2>
+    <p><span style='color: #2c3e50; font-weight: bold;'>BESPAROL<sup>&reg;</sup></span> | GST No: 06BKXPS3908K1ZC</p>
   </header>
 
   <nav>
-    <a href="#about">About Us</a>
-    <a href="#products">Products</a>
-    <a href="#contact">Contact Us</a>
+    <ul>
+      <li><a href="#about">About Us</a></li>
+      <li><a href="#products">Our Expertise</a></li>
+      <li><a href="#contact">Contact Us</a></li>
+    </ul>
   </nav>
 
-  <main class="container">
+  <main>
     <section id="about">
-      <h2>About Besto Chemical</h2>
-      <p>Besto Chemical is a leading provider of innovative chemical solutions. We take pride in our trademark Besparol, which symbolizes top-quality and effective chemical formulations.</p>
+      <h2>About Us</h2>
+      <p>Besto Chemical, founded in 2014 by Chander Shekhar Sharma, is a trusted manufacturer of high-quality paper, packaging, and hygiene products. Our commitment to eco-friendly and cost-effective solutions has made us a preferred choice for clients across industries.</p>
+      <p>We prioritize sustainability and superior product quality, building lasting relationships through timely and reliable services. Our diverse product portfolio includes thermal and carbonless paper solutions, versatile packaging options, and premium stationery products crafted with precision and care.</p>
     </section>
 
-    <section id="products">
-      <h2>Our Products</h2>
-      <p>Explore our wide range of premium products under the trusted trademark Besparol, tailored to meet various industrial and commercial needs.</p>
+    <section id="products" class="expertise-section">
+      <h2>Our Expertise</h2>
+      <div class="expertise-cards">
+        <div class="expertise-card">
+          <h3>Paper Solutions</h3>
+          <p>Thermal Paper Rolls, Two Ply & Three Ply Carbonless Rolls (Self Carbon Roll), One Ply Plain Paper Rolls, Two Ply Carbon Rolls</p>
+        </div>
+        <div class="expertise-card">
+          <h3>Packaging</h3>
+          <p>Paper Bags, Non-Woven Bags, Bar Code Stickers</p>
+        </div>
+        <div class="expertise-card">
+          <h3>Stationery</h3>
+          <p>Printed Stationery, Office Files & Folders</p>
+        </div>
+        <div class="expertise-card">
+          <h3>Hygiene Products</h3>
+          <p>Cleaning Solutions, Car Cleaning Products</p>
+        </div>
+      </div>
     </section>
 
-    <section id="contact" class="contact">
+    <section id="contact">
       <h2>Contact Us</h2>
-      <p><strong>Address:</strong> 14/4 Padam Nagar, Tigaon Road, Kheri Pul, Old Faridabad, Faridabad, Haryana</p>
-      <p><strong>Phone:</strong> +91-XXXXXXXXXX (Add your contact here)</p>
-      <p><strong>Email:</strong> contact@bestochemical.com (Optional Email)</p>
+      <p>For inquiries and bulk orders, please contact us:</p>
+      <p>Email: <a href="mailto:bestopaperroll@gmail.com">bestopaperroll@gmail.com</a></p>
+      <p>Phone: +91-9810286298, +91-8750084580</p>
+      <p>Address: 14/4 Padam Nagar, Tigaon Road, Kheri Pul, Old Faridabad, Faridabad, Haryana</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Besto Chemical. All rights reserved.</p>
+    <p>&copy; 2025 Besto Chemical. All rights reserved. <span style='color: #2c3e50; font-weight: bold;'>BESPAROL<sup>&reg;</sup></span> is a registered trademark.</p>
   </footer>
 </body>
 </html>
